--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "fraud-detection-system",
+  "name": "fraud-detection-backend",
   "version": "1.0.0",
-  "description": "Real Fraud Detection System with PDF and SMS",
+  "description": "Backend for fraud detection system",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.0",
-    "pdfkit": "^0.14.0",
-    "twilio": "^4.0.0",
-    "nodemailer": "^6.9.0",
-    "cors": "^2.8.5"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "twilio": "^4.13.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
