--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "name": "fraud-detection-backend",
   "version": "1.0.0",
-  "description": "Backend for fraud detection system",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "twilio": "^4.13.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "twilio": "^4.14.0",
+    "body-parser": "^1.20.2"
   }
 }
