--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "fraud-detection-backend",
+  "name": "transdetection",
   "version": "1.0.0",
+  "description": "Fraud detection system",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "python-backend": "python app.py"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "twilio": "^4.14.0",
-    "body-parser": "^1.20.2"
+    "twilio": "^4.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
   }
 }
