--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "transdetection",
+  "name": "fraud-detection-backend",
   "version": "1.0.0",
-  "description": "Fraud detection system",
+  "description": "Backend server for Fraud Detection System with SMS alerts",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "python-backend": "python app.py"
+    "dev": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "fraud-detection",
+    "sms",
+    "backend",
+    "security"
+  ],
+  "author": "Fraud Detection System",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "twilio": "^4.0.0"
+    "cors": "^2.8.5"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.0"
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
