--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "fraud-detection-backend",
+  "name": "fraud-detection-system",
   "version": "1.0.0",
-  "description": "Backend server for Fraud Detection System with SMS alerts",
+  "description": "Advanced Fraud Detection System with SMS Alerts",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "twilio": "^4.0.0",
+    "body-parser": "^1.20.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   },
   "keywords": [
     "fraud-detection",
-    "sms",
-    "backend",
+    "sms-alerts",
+    "twilio",
     "security"
   ],
-  "author": "Fraud Detection System",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
-  },
-  "engines": {
-    "node": ">=14.0.0"
-  }
+  "author": "Your Name",
+  "license": "MIT"
 }
